fixed some spacing

--- a/second_style.css
+++ b/second_style.css
@@ -182,6 +182,7 @@ button,
 #my_resume {
   width: 100%;
   margin-left: 100px;
+  margin-right: 100px;
 }
 
 .social_media_links > *:hover {
@@ -190,6 +191,7 @@ button,
 
 #my_resume {
   border-color: #9f8082;
+  width: 80%;
 }
 
 .qr_code_img {
@@ -243,6 +245,7 @@ button,
   grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 50px;
   font-size: 20px;
+  width: 90%;
 }
 .contact_form > * {
   display: grid;
@@ -252,6 +255,6 @@ button,
 button {
   font-family: LibreFranklin;
   font-size: 20px;
-  width: auto;
+  width: 90%;
   text-align: left;
 }
